courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error03.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_TIMES,rht=EXP_NUM 2}}]}
  : program
;
